# p4agent

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agent-pr.yml  ci.yml
configs/tasks/: append_hello_agent_comment.yaml  append_hello_agnet_comment.yaml  daily_google_news_report_pipeline.yaml  extract_top10_en_news.yaml  fetch_google_news_homepage.yaml  translate_news_and_render_markdown.yaml
docs/: coverity_fix_flow_plan.md  first_ai_mr_gitlab.md  first_ai_pr.md
docs/tasks/: append_hello_agent_comment.md  append_hello_agnet_comment.md
scripts/ci/: create_gitlab_mr.sh  post_gitlab_issue_note.sh  quality_checks.sh
src/agent_core/: __init__.py  graph.py  service.py  tasks.py
src/app/: __init__.py  agent_pr_command.py  cli.py  main.py
src/core/: __init__.py  orchestrator.py  routing.py  service.py  settings.py  state.py
src/infra/: fs.py
src/infra/llm/: __init__.py  anthropic_adapter.py  azure_adapter.py  base.py  chains.py  factory.py  schema.py  (+3 more)
src/tasks/: __init__.py  base.py  registry.py  validation.py
tests/agent_core/: test_graph.py  test_task_registry.py
tests/app/: test_agent_pr_command.py  test_cli.py  test_main.py
tests/core/: test_orchestrator.py  test_task_registry.py  test_task_router.py
tests/infra/: test_google_news_scraper.py  test_llm_adapters.py  test_llm_chains.py  test_llm_factory.py  test_news_chains.py
tests/integration/: test_service.py
tests/tasks/: test_validation.py
(+17 files in other folders)
